5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1692_1105.log
== TEST (2019-05-02 01:08:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
	if(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Casa: invalido")
-- ERROR:
File "XXXX", line 29
    print("Entrada: ",brasao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:08:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
	if(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Casa: invalido")
-- ERROR:
File "XXXX", line 29
    print("Entrada: ",brasao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:08:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Casa: invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:09:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Casa: invalido")
-- EXECUTION TIME:
0.13103
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:09:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Casa: invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:09:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Casa: invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:10:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Brasao invalido")
-- EXECUTION TIME:
0.179635
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
descricao do brasao: Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
descricao do brasao: Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:10:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("descricao do brasao: ")
if(brasao=="lobo"):
	print("Entrada: ",brasao)
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Entrada: ",brasao)
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Entrada: ",brasao)
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Entrada: ",brasao)
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Entrada: ",brasao)
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Entrada: ",brasao)
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Entrada: ",brasao)
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Entrada: ",brasao)
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Entrada: ",brasao)
	print("Casa: Tully")
else:
	print("Entrada: ",brasao)
	print("Brasao invalido")
-- EXECUTION TIME:
0.152507
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
